[tool.poetry]
name = "suteki_blog_api"
version = "0.1.0"
description = ""
authors = ["Mutsuki Kimuraya <zaubermaerchen@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.85.0"}
SQLAlchemy = {extras = ["asyncmy"], version = "^1.4.41"}
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
