[tool.poetry]
name = "suteki_blog_api"
version = "0.1.0"
description = ""
authors = ["Mutsuki Kimuraya <zaubermaerchen@me.com>"]
license = "MIT"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.115.2"}
SQLAlchemy = {extras = ["asyncmy"], version = "^2.0.29"}
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
