[project]
name = "suteki_blog_api"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.120.1",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncmy]>=2.0.44",
]

[project.optional-dependencies]
asyncmy = []

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]

[tool.pyright]
include = ["app"]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
